Photo link changed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <tr>
             <td>
                 <a href="https://github.com/Adityakr49">
-                <img style="float: left;" width="300" src="Images/Resume.jpg" alt="Aditya Kumar Singh Photo">
+                <img style="float: left;" width="300" src="https://avatars.githubusercontent.com/u/117364289?s=400&u=00954d8338c9731f70e73e69850fdf734b86cbb2&v=4" alt="Aditya Kumar Singh Photo">
                 </a>
             </td>
             <td>
